# Trivial-Game-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: Architecture.drawio
docs/design/: task_system.md
include/trivial/: application.h  engine.h  engine_config.h  layers.h
include/trivial/core/: assert.h  compiler.h  config.h  graphics_api.h  platform.h  profile.h
include/trivial/core/math/: affine2.h  angle.h  concepts.h  constants.h  mat2x3.h  mat4.h  math.h  math_config.h  transform2.h  transform2d.h  vec2.h  vec3.h  vec4.h  vector.h
include/trivial/ecs/: component_store.h  components.h  entity.h  world.h
include/trivial/frame/: frame_context.h
include/trivial/internal/gpu/: context.h
include/trivial/internal/platform/: window.h  window_backend.h
include/trivial/internal/platform/glfw/: window.h
include/trivial/internal/rhi/: backend.h
include/trivial/internal/rhi/vulkan/: backend.h  result.h
include/trivial/render/: renderer.h
include/trivial/scene/: scene.h
include/trivial/task/: task.h  task_function.h  task_graph.h  task_handle.h  task_launch_options.h  task_mutex.h  task_payload.h  task_priority_queue.h  task_slot.h  task_state.h  task_status.h  task_system.h  task_system_config.h  task_wait_group.h  worker.h
include/trivial/time/: engine_time.h  world_time.h
include/trivial/world/: world.h  world_context.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: application.cpp  engine.cpp
src/core/: assert.h  log.cpp  log.h  profile.h
src/core/math/: mat4.cpp
src/ecs/: world.cpp
src/gpu/: context.cpp
src/platform/: window.cpp
src/platform/glfw/: window.cpp
src/render/: renderer.cpp
src/rhi/: backend.cpp
src/rhi/vulkan/: backend.cpp  result.cpp
src/task/: task_graph.cpp  task_system.cpp
src/world/: world.cpp
tests/: CMakeLists.txt
tests/ecs/: world_tests.cpp
tests/math/: angle.cpp  matrix.cpp  transform.cpp  vector.cpp
tests/task/: task_system.cpp
